ulteriori fix